--- a/cst438assignment1/src/main/resources/templates/movie_form.html
+++ b/cst438assignment1/src/main/resources/templates/movie_form.html
@@ -5,16 +5,17 @@
 <title>Movie Form</title>
 </head>
 <body>
-<h2>Movie Ratings</h2>
+<h2>Create a New Movie Rating</h2> <!--more instructive title?-->
+
 <form action="#" th:action="@{/movie}" th:object="${movie}" method="post">
-First name: <input type="text" th:field="*{firstName}" />
-	<span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span> <br />
-Last Name: <input type="text" th:field="*{lastName}" />
-	<span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span> <br />
-Movie Title: <input type="text" th:field="*{movieTitle}" />
-	<span th:if="${#fields.hasErrors('movieTitle')}" th:errors="*{movieTitle}"></span> <br />
-Movie Rating (1-5): <input type="number" min="1" max="5" th:field="*{movieRating}" />
-<input type="submit" value="Submit" />
+	First name: <input type="text" th:field="*{firstName}" />
+		<span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span> <br />
+	Last Name: <input type="text" th:field="*{lastName}" />
+		<span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span> <br />
+	Movie Title: <input type="text" th:field="*{movieTitle}" />
+		<span th:if="${#fields.hasErrors('movieTitle')}" th:errors="*{movieTitle}"></span> <br />
+	Movie Rating (1-5): <input type="number" min="1" max="5" th:field="*{movieRating}" />
+	<input type="submit" value="Submit" />
 </form>
 
 </body>
