--- a/src/main/resources/templates/movie_list.html
+++ b/src/main/resources/templates/movie_list.html
@@ -2,10 +2,11 @@
 <html xmlns:th="www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Movie List List</title>
+<title>Movie Ratings List</title>
 </head>
 <body>
-	<a href="/movies/new">Add a movie</a>
+	<a href="/movies/new">Add a movie</a> <br>
+	<a href="/movies">Sorted movie ratings</a> <br>
 	<br />
 	<table>
 		<tr>
@@ -16,12 +17,12 @@
 			<th>Date</th>
 
 		</tr>
-		<tr th:each="movie : ${movies}">
+		<tr th:each="movie:${movies}">
 			<td th:text="${movie.firstName}"></td>
 			<td th:text="${movie.lastName}"></td>
 			<td th:text="${movie.movieTitle}"></td>
 			<td th:text="${movie.movieRating}"></td>
-			<!-- <td th:number="${movie.date}"></td> -->
+			<td th:text="${movie.date}"></td>
 		</tr>
 	</table>
 </body>
